--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "devDependencies": {
     "child_process": "^1.0.2",
-    "firebase": "^5.8.3",
-    "marked": "^0.6.2",
     "nuxt": "^2.4.3",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {
+    "firebase": "^5.8.3",
+    "marked": "^0.6.2"
   }
 }
